Fix 403 auth, async report, and add docker-compose
- UserDetailsServiceImpl: return ROLE_USER authority so Spring
  Security 6 accepts authenticated users (empty authority list
  was causing 403 on every protected endpoint)
- ReportService: remove @Async from method signature — Spring
  Security re-authorizes the MVC async dispatch thread and fails
  without a SecurityContext; parallel CompletableFuture.allOf()
  fan-out is preserved internally, method now returns synchronously
- AsyncConfig: wrap ThreadPoolTaskExecutor with
  DelegatingSecurityContextExecutor so worker threads inherit
  the caller's SecurityContext
- ReportController: update return type from CompletableFuture
  to ResponseEntity to match synchronous service
- docker-compose.yml: Postgres 16-alpine for local dev